--- a/assessment.css
+++ b/assessment.css
@@ -36,15 +36,13 @@ blockquote {
   list-style: none;
 }
 
-ul > li:first-child {
+ ul > ul:first-child {
   background: url("https://upload.wikimedia.org/wikipedia/en/4/44/Denver_Broncos_logo.svg");
   background-repeat: no-repeat;
-  width:auto;
-height:50px;
+
 }
-ul > li:last-child {
+ul > ul:last-child {
   background: url("https://upload.wikimedia.org/wikipedia/commons/5/5c/Chicago_Bears_logo.svg");
   background-repeat: no-repeat;
-  width:auto;
-height:50px;
+
 }
