--- a/assessment.css
+++ b/assessment.css
@@ -1,3 +1,22 @@
+ul > ul {
+ background-image: url("https://upload.wikimedia.org/wikipedia/en/4/44/Denver_Broncos_logo.svg");
+ background-repeat: no-repeat;
+
+ width: 300px;
+ height: 200px;
+
+}
+ul > ul:last-child {
+ background-image: url("https://upload.wikimedia.org/wikipedia/commons/5/5c/Chicago_Bears_logo.svg");
+ background-repeat: no-repeat;
+ width: 300px;
+ height: 200px;
+}
+
+ol < li:first-child{
+  font-weight: bold;
+}
+
 .subjectHeader {
   color: green;
   font-family: sans-serif;
@@ -34,15 +53,4 @@ blockquote {
 
 #checkbox-grid {
   list-style: none;
-}
-
- ul > ul:first-child {
-  background: url("https://upload.wikimedia.org/wikipedia/en/4/44/Denver_Broncos_logo.svg");
-  background-repeat: no-repeat;
-
-}
-ul > ul:last-child {
-  background: url("https://upload.wikimedia.org/wikipedia/commons/5/5c/Chicago_Bears_logo.svg");
-  background-repeat: no-repeat;
-
 }
